Fix of icon alignmentFixing Icons
This file just needed a margin-top to middle align the icons.

--- a/styles/settings.less
+++ b/styles/settings.less
@@ -116,6 +116,7 @@
             content: '';
             object-fit: contain;
             margin-right: 9px;
+            margin-top: 5px;
             background-position: center center;
             background-repeat: no-repeat;
             background-size:contain;
